apply plugin: 'java'
apply plugin: 'maven-publish'

final int versionMajor = 2
final int versionMinor = 0
final int versionPatch = 0

final String gitHubRepo = 'alt236/USB-Device-Info---Android'
final String artifactName = 'usbdeviceenumerator'
final String artifactDesc = 'List USB devices by parsing sysfs. Linux/Android only.'
final String[] tags = ['usb', 'java', 'android']

final String artifactGroupId = 'uk.co.alt236'
final String semanticVersion = "${versionMajor}.${versionMinor}.${versionPatch}"
final String gitHubUrl = "https://github.com/${gitHubRepo}"

sourceCompatibility = "1.8"
targetCompatibility = "1.8"

test {
    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
}

dependencies {
    compileOnly libs.jsr305
    testImplementation libs.mockito
    testImplementation libs.junit4
}

task sourcesJar(type: Jar, dependsOn: classes) {
    from sourceSets.main.allSource
    archiveClassifier = 'sources'
}

task javadocJar(type: Jar, dependsOn: javadoc) {
    from javadoc.destinationDir
    archiveClassifier = 'javadoc'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            if (plugins.hasPlugin('war')) {
                from components.web
            } else {
                from components.java
            }

            groupId artifactGroupId
            artifactId artifactName
            version semanticVersion

            artifact sourcesJar
            artifact javadocJar
        }
    }
}
